# song-birds--ai

./: .gitignore  README.md  composer.py  logger.py  lyricist.py  main.py  ollama.py  openai_assistant.py  pyproject.toml  song_writer.py
frontend/: index.html
