[tool.poetry]
name = "multi-agent-song-writing-ai"
version = "0.1.0"
description = "A multi-agent AI system for writing songs"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.1"  # Make sure this line is present
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"